*2007/10/22
 1) Now seedit-conveter does not use local file information.
 You can cross-develop policy for embedded devices.
 For non-embedded people, 
speed to convert SPDL to SELinux policy has become faster.
 
 2) /etc/selinux/seedit/contexts/files/customizable_types 
    is generated. Here, types that are used for file type transition is registered.

 3) Following options are added to seedit-conveter
   -c: <file>: Input label-file relationship for files that are labeled by file_type trans. Usually it is /usr/share/seedit/base_policy/dynamic_contexts.
   --more-warning: Show more warning useful to avoid misconfiguration.
   --disable-boolean: Do not output conditional policy
   --out-file_type_trans-context: Search local file tree and find files that are labeled by file_type_trans, and output list to file_contexts file.     

 4) For cross development install see INSTALL.cross
	
*2007/07/12
 Add -r <root> option for cross development.
   stat, opendir will use <root>/filename as input.

*2007/07/11
 Removed --busybox option support because this option is not useful.
 Add --disable-boolean option

*2007/07/06 
 Fixed initialize message for seedit-gui
 When uninstall, extra audit configuration is removed from audit.rules.

*2007/05/24 2.1.2
 - Support memory protection permissions for more security against buffer overrun attacks
   - Support execmem, execheap,execstack permissions.
     like,  allowpriv execmem; 
   - support execmod permission, you have to use file permission "m" to allow execmod.
   - Above permissions are only rarely used.
 - Added size optimize option: -t.
	-t 1: size optimization by attribute(Under construction, only stub)
	-t 2: size optimization by not supporting dir search permission.
 - Support busybox_contexts file by --busybox option(will be removed in the future however).
 - Some clean ups
 - Support Cent OS 5
 - not using seusers file 

*2007/05/19
 Fixed bug of RBAC for CentOS5.

*2007/02/14 2.1.1
 - Fixed bug