@@ -45,6 +45,9 @@ policy:
 install: policy
 	cp $(OUTDIR)/file_contexts $(CONTEXTSDIR)/files/
 	cp $(OUTDIR)/file_contexts.m4 $(CONTEXTSDIR)/files/
+	if [ ! -e $(OUTDIR)/file_contexts.m4.old ] ; then \
+	   cp $(OUTDIR)/file_contexts.m4 $(OUTDIR)/file_contexts.m4.old;\
+	fi;	 
 	cp $(OUTDIR)/customizable_types $(CONTEXTSDIR)
 	cp $(OUTDIR)/userhelper_context $(CONTEXTSDIR)
 	cp -r $(BASEPOLICYDIR)/contexts/*  $(CONTEXTSDIR) 
