@@ -22,30 +22,9 @@ initialize_seedit() {
  if [ -e /usr/share/seedit/rbac-on ]; then
   /usr/sbin/seedit-rbac off -n    
  fi
- # This is needed to label files that need file type transition configuration
- cp /usr/share/seedit/initialize/dynamic_contexts /usr/share/seedit/base_policy
         ### Make binary policy to fit user's environment
         # Make binary policy into /usr/share/seedit/sepolicy
- /usr/sbin/seedit-load -tv -n
- #Copy related file to /etc/selinux
- if [ $MODULAR = "n" ];then \
-  cp $SEPOLICYDIR/policy.* $POLICYROOT/policy;\
- fi
- cp $SEPOLICYDIR/file_contexts $POLICYROOT/contexts/files/
- cp $SEPOLICYDIR/customizable_types $POLICYROOT/contexts/files/
- cp $SEPOLICYDIR/userhelper_context $POLICYROOT/contexts
- echo "" >  $POLICYROOT/contexts/files/file_contexts.homedirs
- echo "" >  $POLICYROOT/users/system.users
- echo "" >  $POLICYROOT/users/local.users
-
- if [ ! -e /usr/share/seedit/sepolicy/file_contexts.m4.old ]; then \
-  cp /usr/share/seedit/sepolicy/file_contexts.m4 /usr/share/seedit/sepolicy/file_contexts.m4.old;\
- fi 
- #When using modular policy, we have to install policy.<version> here.
- if [ $MODULAR = "y" ]; then
-  /usr/sbin/semodule -b /usr/share/seedit/sepolicy/base.pp -s seedit -n
-  cp /usr/share/seedit/sepolicy/file_contexts $POLICYROOT/contexts/files
- fi
+ /usr/sbin/seedit-load -d -v -n
  
  ###Setup auditd
  #Register dummy audit rule, this is necessary to display PATH entry in log 
@@ -83,27 +62,7 @@ initialize_seedit() {
    $SETFILES -v /etc/selinux/seedit/contexts/files/file_contexts $FILESYSTEMS
       fi
  fi
-
- #Setup initialization at boot
- echo "/var/tmp/bootstrap.sh" >> /etc/rc.d/rc.local
- # Code related to bootstrap is from Yoichi Hirose <yhirose@users.sourceforge.jp>
- cat << __EOF >/var/tmp/bootstrap.sh
-
-#!/bin/sh
-/usr/sbin/seedit-restorecon -R /etc -v
-/usr/sbin/seedit-load -v
-cat /etc/rc.d/rc.local | sed -e 's!/var/tmp/bootstrap.sh!!g' > /etc/rc.d/rc.local.tmp
-rm -f /etc/rc.d/rc.local
-mv /etc/rc.d/rc.local.tmp /etc/rc.d/rc.local
-/usr/sbin/seedit-restorecon  /etc/rc.d/rc.local -v
-chmod 0755 /etc/rc.d/rc.local
-rm /usr/share/seedit/sepolicy/need-init
-init 6
-
-__EOF
-
- chmod 755 /var/tmp/bootstrap.sh
-
+ rm /usr/share/seedit/sepolicy/need-init
 
 }
 
